Release 0.0.12
- Fix HTML/JS setDash(@patt) output
- Use HarfBuzz::Shaper and Cairo::Glyphs for more accurate text reandering
- Partial support for direction=rtl on Cairo backend. todo: fully reverses all
  text (wanted Text::Bidi or similar to implement CSS unicode-bidi handling)
- Round floating point output in HTML/JS generation. Output to several decimal
  places
Release 0.0.11
- Add Hash::Agnostic role to HTML::Canvas
- Support seperate Path2D objects. Not part of the w3c standard, afaik,
  but supported by major browsers. For an example, see:
  https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/fill
Release 0.0.10
- Fix MeasureText test in render-pdf-test-sheets.t
Release 0.0.9
- Rename sources *.pm -> *.rakumod
Release 0.0.8
- Add AT-KEY and AT-STORE methods to approximate Javascript
  associative access, to methods and attributes, e.g.:
      $canvas<scale> = (2.0, 3.0); $canvas<font> = "30px Arial";
Release 0.0.7
- Fix save and restore methods to include lineDash and lineDashOffset
Release 0.0.6
- Provide a fallback font resources/font/FreeMono.ttf for
  missing fonts. Assists with smoke testing and basic installation.
Release 0.0.5
- Fix $.lineDash accessor to be rw for Rakudo 6.d
Release 0.0.4
- Renamed dependency CSS::Declarations -> CSS:Properties
Release 0.0.3
- Create HTML::Canvas::To::Cairo::Cache for shared objects.
  Significantly reduces processing times and file sizes for
  multiple page PDF files
Release 0.0.2
- fix tests
  -- add tmp directory
  -- more forgiving measureText test in t/render-pdf-test-sheets.t 
Release 0.0.1
- initial release